Update video cards with new content and links

--- a/index.html
+++ b/index.html
@@ -375,14 +375,14 @@
         <h2 class="text-center fw-bold text-dark mb-5 fs-1">Vídeos Recentes do Canal</h2>
         <div class="row g-4">
 
-            <!-- VIDEO CARD -->
+            <!-- VIDEO CARD 1 -->
             <div class="col-md-4">
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/0GZvOz7s9UY/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Descoberta a estrela mais pura do universo conhecido">
-                        <!-- Botão continua clicável, imagem NÃO -->
-                        <button onclick="window.open('https://youtu.be/0GZvOz7s9UY','_blank')"
+                        <img src="https://img.youtube.com/vi/_NscUskXCUs/hqdefault.jpg"
+                             class="w-100 h-100 object-fit-cover" 
+                             alt="Miniatura do vídeo A MATÉRIA ESCURA FOI OBSERVADA? O Fim de um Mistério de 100 Anos">
+                        <button onclick="window.open('https://youtu.be/_NscUskXCUs','_blank')"
                                 class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
                                 style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
@@ -390,9 +390,9 @@
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fs-5 fw-bold">
-                            Descoberta a estrela mais pura do universo conhecido
+                            A MATÉRIA ESCURA FOI OBSERVADA? O Fim de um Mistério de 100 Anos
                         </h3>
-                        <a href="https://youtu.be/0GZvOz7s9UY"
+                        <a href="https://youtu.be/_NscUskXCUs"
                            class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
@@ -400,13 +400,14 @@
                 </div>
             </div>
 
-            <!-- VIDEO CARD -->
+            <!-- VIDEO CARD 2 -->
             <div class="col-md-4">
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/EOWMCgjsjtE/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Matéria escura e energia escura podem ser uma ilusão">
-                        <button onclick="window.open('https://youtu.be/EOWMCgjsjtE','_blank')"
+                        <img src="https://img.youtube.com/vi/BtuG49Cgqk4/hqdefault.jpg"
+                             class="w-100 h-100 object-fit-cover" 
+                             alt="Miniatura do vídeo A CONSCIÊNCIA COMO FUNDAMENTO DO UNIVERSO — A TEORIA QUE ESTÁ SACUDINDO A FÍSICA">
+                        <button onclick="window.open('https://youtu.be/BtuG49Cgqk4','_blank')"
                                 class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
                                 style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
@@ -414,9 +415,9 @@
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fs-5 fw-bold">
-                            Matéria escura e energia escura podem ser uma ilusão
+                            A CONSCIÊNCIA COMO FUNDAMENTO DO UNIVERSO — A TEORIA QUE ESTÁ SACUDINDO A FÍSICA
                         </h3>
-                        <a href="https://youtu.be/EOWMCgjsjtE"
+                        <a href="https://youtu.be/BtuG49Cgqk4"
                            class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
@@ -424,13 +425,14 @@
                 </div>
             </div>
 
-            <!-- VIDEO CARD -->
+            <!-- VIDEO CARD 3 -->
             <div class="col-md-4">
                 <div class="card shadow-md border-0 h-100">
                     <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/hRzQcjVm2pw/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" alt="Miniatura do vídeo Detectados sinais que podem vir de outro universo">
-                        <button onclick="window.open('https://youtu.be/hRzQcjVm2pw','_blank')"
+                        <img src="https://img.youtube.com/vi/B6PEJ_G9V8U/hqdefault.jpg"
+                             class="w-100 h-100 object-fit-cover" 
+                             alt="Miniatura do vídeo EINSTEIN PODE REVELAR O QUE VEIO ANTES DO BIG BANG!">
+                        <button onclick="window.open('https://youtu.be/B6PEJ_G9V8U','_blank')"
                                 class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
                                 style="pointer-events: auto;">
                             <i class="bi bi-play-circle-fill text-white display-1"></i>
@@ -438,15 +440,16 @@
                     </div>
                     <div class="card-body text-center">
                         <h3 class="fs-5 fw-bold">
-                            Detectados sinais que podem vir de outro universo
+                            EINSTEIN PODE REVELAR O QUE VEIO ANTES DO BIG BANG!
                         </h3>
-                        <a href="https://youtu.be/hRzQcjVm2pw"
+                        <a href="https://youtu.be/B6PEJ_G9V8U"
                            class="btn btn-danger mt-2" target="_blank">
                             <i class="bi bi-youtube"></i> Assistir
                         </a>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
