--- a/index.html
+++ b/index.html
@@ -125,58 +125,102 @@
 
  <main id="mainContent" class="site-main bg-white" style="min-height:400px;">
 
-<!-- ============================= -->
-<!-- CARDS LADO A LADO -->
-<!-- ============================= -->
-<section class="my-5">
-    <div class="container">
-        <div class="row g-4 align-items-start">
-            <!-- CARD PRINCIPAL (horizontal) -->
-            <div class="col-12 col-md-8">
-                <div class="card shadow-lg border-0 h-100">
-                    <div class="row g-0 h-100">
-                        <!-- Imagem -->
-                        <div class="col-md-6">
-                            <img src="https://i.postimg.cc/fyVKgWLt/23a464501fce4141a8f31ecd3860b29d.jpg"
-                                 class="img-fluid h-100 w-100 object-fit-cover"
-                                 alt="Imagem ilustrativa do cometa 3I/ATLAS">
-                        </div>
-                        <!-- Conteúdo -->
-                        <div class="col-md-6 d-flex flex-column justify-content-center p-4 bg-primary text-white">
-                            <h2 class="fw-bold mb-3">
-                                Cometa 3I/ATLAS: o visitante interestelar que surpreendeu a ciência
-                            </h2>
-                            <a href="https://portalciencianews.com.br/post/outubro/cometa-3i-atlas-visitante-interestelar.html"
-                               class="btn btn-warning fw-semibold px-4">
-                                Leia o artigo completo
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- SIDEBAR CARD -->
-            <aside class="col-12 col-md-4">
-                <div class="card shadow-lg border-0 h-100">
-                    <img src="https://scx1.b-cdn.net/csz/news/800a/2025/event-horizon-telescop.jpg"
-                         class="card-img-top"
-                         alt="Simulação do buraco negro M87*">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="fw-bold text-dark mb-3">
-                            Telescópio do Horizonte de Eventos revela novo método para detectar matéria escura
-                        </h3>
-                        <p class="text-muted small mb-3">
-                            Pesquisadores utilizam imagens do EHT para identificar sinais sutis de matéria escura ao redor de buracos negros supermassivos.
-                        </p>
-                        <a href="https://portalciencianews.com.br/post/outubro/evento-horizon-materia-escura.html"
-                           class="btn btn-primary mt-auto">
-                            Leia mais
-                        </a>
-                    </div>
-                </div>
-            </aside>
+<!-- VÍDEOS DO YOUTUBE EM DESTAQUE --> 
+<section class="container py-4">
+    <div class="row g-4">
+
+      <!-- Vídeo 1 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="ratio ratio-16x9">
+            <iframe 
+              src="https://www.youtube.com/embed/YKosdhTmqFw?controls=0&rel=0&modestbranding=1"
+              title="James Webb e buraco negro supermassivo"
+              allowfullscreen
+              style="pointer-events:none;">
+            </iframe>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              PELA PRIMEIRA VEZ JAMES WEBB CONFIRMA BURACO NEGRO SUPERMASSIVO
+            </h5>
+            <p class="card-text">
+              O James Webb confirmou o primeiro buraco negro supermassivo fugitivo,
+              viajando a quase 1.000 km/s pelo espaço.
+            </p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <a href="https://youtu.be/YKosdhTmqFw" 
+               target="_blank" 
+               class="btn btn-primary w-100">
+              Leia mais
+            </a>
+          </div>
         </div>
+      </div>
+
+      <!-- Vídeo 2 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="ratio ratio-16x9">
+            <iframe 
+              src="https://www.youtube.com/embed/-ICzRhzlZk0?controls=0&rel=0&modestbranding=1"
+              title="Reatores de fusão e matéria escura"
+              allowfullscreen
+              style="pointer-events:none;">
+            </iframe>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              SHELDON ERROU? REATORES DE FUSÃO PODEM REVELAR A MATÉRIA ESCURA!
+            </h5>
+            <p class="card-text">
+              Novo estudo sugere que reatores de fusão nuclear podem produzir axions,
+              ajudando a detectar a misteriosa matéria escura.
+            </p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <a href="https://youtu.be/-ICzRhzlZk0" 
+               target="_blank" 
+               class="btn btn-primary w-100">
+              Leia mais
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Vídeo 3 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="ratio ratio-16x9">
+            <iframe 
+              src="https://www.youtube.com/embed/5USgIlRkOzE?controls=0&rel=0&modestbranding=1"
+              title="Gravidade quântica"
+              allowfullscreen
+              style="pointer-events:none;">
+            </iframe>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              PRIMEIRA PISTA REAL DA GRAVIDADE QUÂNTICA?
+            </h5>
+            <p class="card-text">
+              Físicos propõem as “qdésicas” como uma forma de testar e unificar
+              a relatividade geral com a mecânica quântica.
+            </p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <a href="https://youtu.be/5USgIlRkOzE" 
+               target="_blank" 
+               class="btn btn-primary w-100">
+              Leia mais
+            </a>
+          </div>
+        </div>
+      </div>
+
     </div>
-</section>
+  </section>
 
 <!-- ============================= -->
 <!-- VÍDEOS ATUAIS -->
