Remove recent videos section from index.html
Removed the section for recent videos and video cards from the main content area.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </div>
   </nav>
-
+<!-- ÁREA DE MAIN -->
  <main id="mainContent" class="site-main bg-white" style="min-height:400px;">
 
 <!-- VÍDEOS DO YOUTUBE EM DESTAQUE --> 
@@ -221,82 +221,6 @@
 
     </div>
   </section>
-
-<!-- ============================= -->
-<!-- VÍDEOS ATUAIS -->
-<!-- ============================= -->
-<section class="py-5 bg-white">
-    <div class="container">
-        <div class="row g-4 justify-content-center">
-
-            <!-- CARD 1 -->
-            <div class="col-12 col-sm-6 col-md-4">
-                <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
-                    <!-- Vídeo -->
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/u-BQ-wToWTI?controls=0"
-                                class="rounded-top"
-                                style="pointer-events: none;" tabindex="-1"></iframe>
-                    </div>
-                    <div class="card-body">
-                        <h2 class="fs-5 fw-bold">
-                            A TEORIA DAS CORDAS GANHA FORÇA COM O COMPORTAMENTO DA ENERGIA ESCURA
-                        </h2>
-                        <a href="https://www.youtube.com/watch?v=u-BQ-wToWTI"
-                           target="_blank"
-                           class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
-                            Assistir no YouTube
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- CARD 2 -->
-            <div class="col-12 col-sm-6 col-md-4">
-                <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/CJIUH2xWFxY?controls=0"
-                                class="rounded-top"
-                                style="pointer-events: none;" tabindex="-1"></iframe>
-                    </div>
-                    <div class="card-body">
-                        <h2 class="fs-5 fw-bold">
-                            OS ÁTOMOS FORAM TORCIDOS PELA LUZ EM REGISTRO INÉDITO!
-                        </h2>
-                        <a href="https://www.youtube.com/watch?v=CJIUH2xWFxY"
-                           target="_blank"
-                           class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
-                            Assistir no YouTube
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- CARD 3 -->
-            <div class="col-12 col-sm-6 col-md-4">
-                <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/DIvvIU0xEHc?controls=0"
-                                class="rounded-top"
-                                style="pointer-events: none;" tabindex="-1"></iframe>
-                    </div>
-                    <div class="card-body">
-                        <h2 class="fs-5 fw-bold">
-                            ENCONTRADOS SINAIS DE ALGO DESCONHECIDO ABAIXO DA PIRÂMIDE DE MIQUERINOS!
-                        </h2>
-                        <a href="https://youtu.be/DIvvIU0xEHc"
-                           target="_blank"
-                           class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
-                            Assistir no YouTube
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
 
 <!-- ============================= -->
 <!-- NOVOS ARTIGOS -->
@@ -411,92 +335,6 @@
     </div>
 </section>
 
-<!-- ============================= -->
-<!-- VÍDEOS RECENTES -->
-<!-- ============================= -->
-<section class="py-5 bg-light">
-    <div class="container">
-        <h2 class="text-center fw-bold text-dark mb-5 fs-1">Vídeos Recentes do Canal</h2>
-        <div class="row g-4">
-
-            <!-- VIDEO CARD 1 -->
-            <div class="col-md-4">
-                <div class="card shadow-md border-0 h-100">
-                    <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/_NscUskXCUs/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" 
-                             alt="Miniatura do vídeo A MATÉRIA ESCURA FOI OBSERVADA? O Fim de um Mistério de 100 Anos">
-                        <button onclick="window.open('https://youtu.be/_NscUskXCUs','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
-                                style="pointer-events: auto;">
-                            <i class="bi bi-play-circle-fill text-white display-1"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-center">
-                        <h3 class="fs-5 fw-bold">
-                            A MATÉRIA ESCURA FOI OBSERVADA? O Fim de um Mistério de 100 Anos
-                        </h3>
-                        <a href="https://youtu.be/_NscUskXCUs"
-                           class="btn btn-danger mt-2" target="_blank">
-                            <i class="bi bi-youtube"></i> Assistir
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- VIDEO CARD 2 -->
-            <div class="col-md-4">
-                <div class="card shadow-md border-0 h-100">
-                    <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/BtuG49Cgqk4/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" 
-                             alt="Miniatura do vídeo A CONSCIÊNCIA COMO FUNDAMENTO DO UNIVERSO — A TEORIA QUE ESTÁ SACUDINDO A FÍSICA">
-                        <button onclick="window.open('https://youtu.be/BtuG49Cgqk4','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
-                                style="pointer-events: auto;">
-                            <i class="bi bi-play-circle-fill text-white display-1"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-center">
-                        <h3 class="fs-5 fw-bold">
-                            A CONSCIÊNCIA COMO FUNDAMENTO DO UNIVERSO — A TEORIA QUE ESTÁ SACUDINDO A FÍSICA
-                        </h3>
-                        <a href="https://youtu.be/BtuG49Cgqk4"
-                           class="btn btn-danger mt-2" target="_blank">
-                            <i class="bi bi-youtube"></i> Assistir
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- VIDEO CARD 3 -->
-            <div class="col-md-4">
-                <div class="card shadow-md border-0 h-100">
-                    <div class="position-relative overflow-hidden" style="height:220px;">
-                        <img src="https://img.youtube.com/vi/B6PEJ_G9V8U/hqdefault.jpg"
-                             class="w-100 h-100 object-fit-cover" 
-                             alt="Miniatura do vídeo EINSTEIN PODE REVELAR O QUE VEIO ANTES DO BIG BANG!">
-                        <button onclick="window.open('https://youtu.be/B6PEJ_G9V8U','_blank')"
-                                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-dark bg-opacity-50"
-                                style="pointer-events: auto;">
-                            <i class="bi bi-play-circle-fill text-white display-1"></i>
-                        </button>
-                    </div>
-                    <div class="card-body text-center">
-                        <h3 class="fs-5 fw-bold">
-                            EINSTEIN PODE REVELAR O QUE VEIO ANTES DO BIG BANG!
-                        </h3>
-                        <a href="https://youtu.be/B6PEJ_G9V8U"
-                           class="btn btn-danger mt-2" target="_blank">
-                            <i class="bi bi-youtube"></i> Assistir
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
 
 <!-- ============================= -->
 <!-- MAIS VISTOS -->
